fixed left alignment globally

--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -39,6 +39,7 @@ h6 {
 p {
     margin: 0 0 25px;
     font-size: 18px;
+text-align:left;
     line-height: 1.5;
     @media(min-width:768px) {
         margin: 0 0 35px;
@@ -236,14 +237,23 @@ a {
         border: 1px solid $light;
     }
     /* Added in { Personal } */
-    ul,
+    ul {
+        text-align: left;
+        margin: 0 0 25px;
+        font-size: 18px;
+        line-height: 1.5;
+        list-style-position: inside;
+	}
     ol {
-        text-align: center;
+        text-align: left;
         margin: 0 0 25px;
         font-size: 18px;
         line-height: 1.5;
         list-style-position: inside;
     }
+	li{
+text-align:left;
+}
     pre {
       padding: 0;
       > code {
